Ironing out lint warnings